--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^24.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
